# bidirectionalization-combined

./: AST.hs  BUtil.hs  BundledCode.hs  BundledCode.hsb  CodeGen.hs  JQuery.hs  JQuery.hsb  Main.hs  Makefile  MyInterpret.hs  Parser.hs  README  SemSyn.hs  Shapify.hs  Type.hs  Util.hs  b18n-combined-cgi.hs  b18n-combined.cabal  bidirectionalization-combined.cabal  combined_b18n.cabal  testcgi.py
example/: init.txt  initHalf.txt  rev.txt  seive.txt  sieve.txt
