Name:                b18n-combined
Version:             0.1
Synopsis:            Prototype Implementation of Combining Syntatic and Semantic Bidirectionalization (ICFP'10)
Description:         This is a prototype implementation of the idea presented 
		     in Combining Syntatic and Semantic Bidirectionalization 
		     by Janis Voigtlaender, Zhenjiang Hu, Kazutaka Matsuda 
		     and Meng Wang.
License:             PublicDomain
Author:              Kazutaka Matsuda
Maintainer:          kztk@kb.ecei.tohoku.ac.jp
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.2


Executable b18n-combined
  Main-is: Main.hs            
  Build-depends: base (>=4), mtl, template-haskell, containers, pretty, parsec
